--- a/s1-getting-started/book-store-notes-final/app/build.gradle
+++ b/s1-getting-started/book-store-notes-final/app/build.gradle
@@ -6,11 +6,11 @@ plugins {
 }
 
 android {
-    namespace 'com.droidcon.bookstorenotes'
+    namespace 'com.droidcon.book_store_notes'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.droidcon.bookstorenotes"
+        applicationId "com.droidcon.book_store_notes"
         minSdk 24
         targetSdk 32
         versionCode 1
@@ -81,8 +81,8 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
