--- a/s1-getting-started/book-store-notes-final/gradle/wrapper/gradle-wrapper.properties
+++ b/s1-getting-started/book-store-notes-final/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Oct 19 20:52:01 BST 2022
+#Wed Feb 08 10:38:25 ICT 2023
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-bin.zip
 distributionPath=wrapper/dists
