--- a/s1-getting-started/book-store-notes-final/settings.gradle
+++ b/s1-getting-started/book-store-notes-final/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Book Store Notes"
+rootProject.name = "book_store_notes"
 include ':app'
